--- a/portfolio.html
+++ b/portfolio.html
@@ -54,7 +54,7 @@
                     <div class="code-line">  role: <span class="string">"Full-Stack Developer"</span>,</div>
                   
                     <div class="code-line">  passion: <span class="string">"Building cool stuff"</span>,</div>
-                    <div class="code -line"> sports </div>
+                
                     <div class="code-line">  status: <span class="string">"Always learning"</span></div>
                     <div class="code-line">};</div>
                     <div class="code-line"><span class="comment">// Let's build something amazing!</span></div>
@@ -296,9 +296,9 @@
                 </div>
                 <div class="social-links">
                     <a href="https://github.com/PreyanshuShah" target="_blank">GitHub</a>
-                    <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/preyanshu-shah-b58408266/" target="_blank">LinkedIn</a>
                     <a href="mailto:preyanshushah@gmail.com">Email</a>
-                    <a href="https://instagram.com/yourusername" target="_blank">Instagram</a>
+                    <a href="https://instagram.com/preyanshu_shah" target="_blank">Instagram</a>
                 </div>
             </div>
             <p>&copy; 2026 Preyanshu Shah. Built with creativity and code.</p>
